--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 
                         </ul>
                     </li>
-
+                    
+                    <li><a href="chatbot.html">ChatBot</a>
                 </ul>
             </nav>
             <section id="welcome">
@@ -147,3 +148,4 @@
 
 
 </html>
+
