--- a/chatbot.html
+++ b/chatbot.html
@@ -102,7 +102,9 @@
         });
    
     </script>
-
+    <a href="index.html" class="back-home">
+    <i class="fa-solid fa-house-chimney"></i></a>
 </body>
 </html>
+
 
