--- a/chatbot.html
+++ b/chatbot.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StuBud</title>
+    <title>StudyHub</title>
 
     <link rel="stylesheet" href="cbstyle.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
@@ -26,7 +26,7 @@
                                 <span class="online_icon"></span>
                             </div>
                             <div class="user_info">
-                                <span>StuBud</span>
+                                <span>StudyHub</span>
                                 <p>Ask me anything!</p>
                             </div>
                         </div>
@@ -106,5 +106,6 @@
     <i class="fa-solid fa-house-chimney"></i></a>
 </body>
 </html>
+
 
 
